Fiz algumas alterações deixando mais profissional e adicionei o vídeo de fundo.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 
 <body>
 
-    <div>
-        <img src="./assets/logo.png" alt="Logo-Mario-Principal" class="Logo-principal">
-        <p>" Encanadores Mario & Luigi - Resolvemos seus problemas com Estilo!"</p>
-        <p>Você se encontra em uma situação de emergência com encanamento? Vazamantos inesperados, canos entupidos ou
-            torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia! Apresentamos a
-            vocês
-            os encanadores mais famosos do Reino dos Cogumelos, Mario e Luigi!.
-            Espero que possa ter ajudado e vamos codar galera!!</p>
-        <button>Entre em Contato</button>
+    <div class="caixa-mae">
+        <div class="container1">
+            <img src="./assets/logo.png" alt="Logo-Mario-Principal" class="Logo-principal">
+            <p>" Encanadores Mario & Luigi - Resolvemos seus problemas com Estilo!"</p>
+            <p>Você se encontra em uma situação de emergência com encanamento? Vazamantos inesperados, canos entupidos
+                ou
+                torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia! Apresentamos
+                a
+                vocês
+                os encanadores mais famosos do Reino dos Cogumelos, Mario e Luigi!.
+                Espero que possa ter ajudado e vamos codar galera!!</p>
+            <button>Entre em Contato</button>
+        </div>
+        <div class="container2">
+            <img src="./assets/mario.png" alt="Logo Mario e Luigi" class="Logo-Mario-Luigi">
+        </div>
     </div>
 
-    <div>
-        <img src="./assets/mario.png" alt="Logo Mario e Luigi" class="Logo-Mario-Luigi">
+    <div class="caixa-video">
+        <video src="./assets/video.mp4" autoplay muted loop></video>
     </div>
 
 </body>
