--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 <body>
 
+    <div class="mascara-formulario"></div>
+
+    <div class="header">
+        <img src="./assets/logo-header.png" alt="Logo-Header-Mario">
+        <a>Home</a>
+        <a>Nossos Serviços</a>
+        <a>Ajuda</a>
+    </div>
+
     <div class="caixa-mae">
         <div class="container1">
             <img src="./assets/logo.png" alt="Logo-Mario-Principal" class="Logo-principal">
@@ -22,6 +31,9 @@
                 os encanadores mais famosos do Reino dos Cogumelos, Mario e Luigi!.
                 Espero que possa ter ajudado e vamos codar galera!!</p>
             <button>Entre em Contato</button>
+            <a href="https://wa.me/5531971224641?text=Quero%20ajuda%20dos%20irm%C3%A3os%20Mario!" class="link-wapp">
+                <img src="./assets/whatsapp.png" alt="Link WhatsApp">
+            </a>
         </div>
         <div class="container2">
             <img src="./assets/mario.png" alt="Logo Mario e Luigi" class="Logo-Mario-Luigi">
@@ -30,7 +42,15 @@
 
     <div class="caixa-video">
         <video src="./assets/video.mp4" autoplay muted loop></video>
+        <div class="mascara"></div>
     </div>
+
+    <form class="formulario-fale-conosco">
+        <input placeholder="Seu Nome">
+        <input placeholder="Seu Telefone">
+        <textarea placeholder="Digite seu problema aqui"></textarea>
+        <button>Pedir Orçamento</button>
+    </form>
 
 </body>
 
