Introduzi o JS no projeto, aparecendo e escondendo form.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="mascara-formulario"></div>
+    <div onclick="cliqueinamascara()" class="mascara-formulario"></div>
 
     <div class="header">
         <img src="./assets/logo-header.png" alt="Logo-Header-Mario">
@@ -30,7 +30,7 @@
                 vocês
                 os encanadores mais famosos do Reino dos Cogumelos, Mario e Luigi!.
                 Espero que possa ter ajudado e vamos codar galera!!</p>
-            <button>Entre em Contato</button>
+            <button onclick="cliqueinobotao()">Entre em Contato</button>
             <a href="https://wa.me/5531971224641?text=Quero%20ajuda%20dos%20irm%C3%A3os%20Mario!" class="link-wapp">
                 <img src="./assets/whatsapp.png" alt="Link WhatsApp">
             </a>
@@ -53,5 +53,7 @@
     </form>
 
 </body>
+
+<script src="./scripts.js"></script>
 
 </html>
