Terminei de configurar o formulário e fiz a responsividade.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <div class="mascara"></div>
     </div>
 
-    <form class="formulario-fale-conosco">
-        <input placeholder="Seu Nome">
-        <input placeholder="Seu Telefone">
-        <textarea placeholder="Digite seu problema aqui"></textarea>
-        <button>Pedir Orçamento</button>
+    <form class="formulario-fale-conosco" action="https://formcarry.com/s/JaiaKhlU9zz" method="POST"
+        enctype="multipart/form-data">
+        <input placeholder="Seu Nome" type="text" name="Nome">
+        <input placeholder="Seu Telefone" type="tel" name="Telefone">
+        <textarea placeholder="Digite seu problema aqui" name="Duvida"></textarea>
+        <button type="submit">Pedir Orçamento</button>
     </form>
 
 </body>
